Fixed the locations section and made minor changes to alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,9 +7,10 @@ body {
   opacity: 0.9;
   min-width: 1300px;
   display: flex;
+  margin: 0;
 }
 
-.logo img{
+.logo img {
   height: 50px;
 }
 
@@ -17,12 +18,13 @@ header {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid seashell;
+  padding-right: 100px;
   height: 69px;
   position: fixed;
   top: 0;
   width: 100%;
   align-items: center;
-  z-index: 10;
+  z-index: 1;
   background-color: black;
 }
 
@@ -92,10 +94,6 @@ nav a {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-
-footer {
-  text-align: left;
-  margin-left: 20px;
 }
 
 .address {
@@ -103,4 +101,9 @@ footer {
   height: 250px;
   background-color: black;
   margin: 20px;
+}
+
+footer {
+  text-align: center;
+  margin-left: 20px;
 }
